--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <h1>製作團隊</h1>
 
         <div class="card">
-            <img src="sticker.png" alt="牛羿翔的照片">
+            <img src="3sjM3t9.jpg" alt="牛羿翔的照片">
             <h2>牛羿翔</h2>
             <p>✨ 系級：外文系3年級<br>
                ✨ 興趣：唱歌<br>
@@ -32,4 +32,3 @@
 
 </body>
 </html>
-
